--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ structopt = "0.3.15"
 regex = "1.3.9"
 termcolor = "1.1"
 rustyline = "6.3.0"
+crossterm = "0.27.0"
+ratatui = "0.25.0"
+unicode-width = "0.1.11"
